chore: add sharp image processing dependency

--- a/packages/monad-website/partials/_header.html
+++ b/packages/monad-website/partials/_header.html
@@ -1,7 +1,7 @@
 <header class="topbar">
   <div class="container topbar__inner">
     <a class="brand" href="/">
-      <span class="brand__mark">◈</span>
+      <img class="brand__mark" src="/images/icon.png" alt="Monad" data-no-optimize />
       <span class="brand__name">{{site.name}}</span>
     </a>
 
@@ -9,9 +9,10 @@
       <a class="nav__link {{data.homeClass}}" href="/">Home</a>
       <a class="nav__link {{data.featuresClass}}" href="/features/">Features</a>
       <a class="nav__link {{data.advancedClass}}" href="/advanced/">Advanced</a>
+      <a class="nav__link {{data.blogClass}}" href="/blog/">Blog</a>
       <a class="nav__link {{data.aboutClass}}" href="/about/">About</a>
     </nav>
 
-    <a class="btn btn--small btn--primary" href="https://github.com/anthropics/monad">GitHub</a>
+    <a class="btn btn--small btn--primary" href="https://github.com/WynterJones/monad">GitHub</a>
   </div>
 </header>
