--- a/packages/monad-website/partials/_footer.html
+++ b/packages/monad-website/partials/_footer.html
@@ -2,7 +2,7 @@
   <div class="container footer__inner">
     <div>
       <div class="brand brand--footer">
-        <span class="brand__mark">◈</span>
+        <img class="brand__mark" src="/images/icon.png" alt="Monad" data-no-optimize />
         <span class="brand__name">{{site.name}}</span>
       </div>
       <p class="fine">Static marketing pages, Vite-fast.</p>
@@ -12,7 +12,7 @@
       <a href="/guide/">Guide</a>
       <a href="/features/">Features</a>
       <a href="/advanced/">Advanced</a>
-      <a href="https://github.com/anthropics/monad">GitHub</a>
+      <a href="https://github.com/WynterJones/monad">GitHub</a>
       <a href="/sitemap.xml">Sitemap</a>
     </div>
   </div>
