--- a/packages/monad-website/partials/_layout.html
+++ b/packages/monad-website/partials/_layout.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
   {{slot:head}}
-  <link rel="icon" href="/favicon.svg">
+  <link rel="icon" type="image/png" href="/images/icon.png">
+  <meta property="og:image" content="/images/og-image.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="/images/og-image.jpg">
 </head>
 <body>
   <div class="bgGlow"></div>
